# ChemicalDiceG

./: .readthedocs.yaml  Readme.rst  pyproject.toml  workflow.yml
ChemicalDiceG/: smiles_to_embeddings.py
test/: test.py
