[build-system]
requires = [
	"setuptools>=54",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ChemicalDiceG"
version = "0.0.5"
readme = "Readme.rst"
description = "ChemicalDiceG: Transforming cheminformatics and bioinformatics with advanced data fusion analysis."
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]
optional-dependencies = { docs = [
    "sphinx",
    "sphinx-gallery",
    "sphinx-rtd-theme",	
    "numpy",
    "pandas",
    "tqdm"
] }

[project.scripts]
ChemicalDiceG = "ChemicalDiceG.__main__:main"

[tool.setuptools]
py-modules = ['ChemicalDiceG']

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["ChemicalDiceG"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
